SERVER-58680 Let $ifNull not remove the last null constant